--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "uuid": "^13.0.0",
-    "vercel": "^50.1.4"
+    "vercel": "^50.1.4",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
